added video walkthrough

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="video-container"></div>
     <video class="video" controls>
-        <source src="" />
+        <source src="./assets/ecommerce-walkthrough.webm" />
     </video>
 </body>
 </html>
